# OpenGMS-Jupyter

./: .gitignore  README.md
GeoModelWeb/client/: .env.example  index.html  package-lock.json  package.json  vite.config.js
GeoModelWeb/docs/: ENV_CONFIG.md  JUPYTER_SETUP.md
GeoModelWeb/scripts/: release-jupyter-agent-image.sh  set-ip.ps1
GeoModelWeb/server/: .env  .env.example  index.js  package-lock.json  (+6 more)
agent-service/: .env.example  JUPYTER_AGENT_UPGRADE_NOTES.md  README.md  TRI_SPACE_IMPLEMENTATION.md  pyproject.toml  run.py  test_new_features.py  test_skills.py  test_tri_space.py
agent-service/agent_service/: __init__.py  agent.py  condenser.py  prompts.py  prompts_enhanced.py  server.py  state.py  tools.py  workspace_tools.py
agent-service/agent_service/skills/: __init__.py  base.py  router.py
agent-service/agent_service/skills/implementations/: __init__.py  model_skills.py  notebook_skills.py
agent-service/data/: agent_cases.json
agent-service/data/conversations/user_1768375650905_0wkegaz40/: de0224fc-c8ad-4ed1-9b86-c8639a2c836c.json
agent-service/data/conversations/user_1768395726376_yc6vx1llv/: 57d0707d-fe19-4a43-9e88-d69c588aec8e.json
agent-service/data/conversations/user_1769320134762_mtmtteb31/: 0d915290-f10e-450e-bb3e-7694602cd612.json
agent-service/data/profiles/: anonymous.json  default.json  test_user.json
agent-service/data/users/: None.json  anonymous.json  demo_user.json  test_user.json
jupyterlab-geomodel/: LICENSE  README.md  install.json  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsconfig.tsbuildinfo
(+100 files in other folders)
